--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bowlby+One+SC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sorts+Mill+Goudy:ital@1&display=swap');
 
 *{
     margin: 0;
@@ -6,32 +7,35 @@
     box-sizing: border-box;
 }
 
-/* body{
-    background-image: url(./net.jpg)
-} */
+body{
+    /* background-image: url(./img/netflix-background-image\ 1.png); */
+    color: white;
+}
+
 #container{
     max-width: 1240px;
     height: 1036px;
     background-color: rgba(0, 0, 0, 0.3);
-      margin: auto;
+    margin: auto;
     margin-top: 30px;
 }
 
 #title{
+    font-size: 3.1rem;
+    color: white;
     font-family: 'Bowlby One SC', cursive;
-    letter-spacing: 0,05em;
-
+    letter-spacing: 0.05em;
 }
 
 span{
     color: red;
 }
+
 #description{
-    
+    font-family: 'Sorts Mill Goudy', serif;
+
 }
 
 #header{
     text-align: center;
-}
-
 
